Updated to Swift 3 Syntax

--- a/Phonetic/Base.lproj/LaunchScreen.storyboard
+++ b/Phonetic/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11163.2" systemVersion="16A239j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11133"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,42 +15,34 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wave_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="qh5-ZS-mbo">
-                                <rect key="frame" x="0.0" y="130" width="600" height="470"/>
-                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wave_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="qh5-ZS-mbo"/>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_screen_progress_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Lew-5y-IoI">
-                                <rect key="frame" x="265" y="72" width="70" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="0ur-OG-tqc"/>
                                     <constraint firstAttribute="height" constant="70" id="wfw-3H-fBm"/>
                                 </constraints>
                             </imageView>
                             <visualEffectView opaque="NO" alpha="0.93999999999999995" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XMu-WD-UfS">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nkK-S6-AkB">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    <frame key="frameInset"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="19u-H0-1lT">
-                                            <rect key="frame" x="268" y="0.0" width="64" height="600"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOQ-RN-nmA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="64" height="204.5"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_screen_phonetic_icon" translatesAutoresizingMaskIntoConstraints="NO" id="7xR-Yu-25P">
-                                                    <rect key="frame" x="0.0" y="204.5" width="64" height="55"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="55" id="23E-a0-8dB"/>
                                                         <constraint firstAttribute="width" constant="64" id="utw-rf-sym"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zm9-tH-RnK">
-                                                    <rect key="frame" x="0.0" y="259.5" width="64" height="340.5"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </view>
                                             </subviews>
                                             <constraints>
@@ -67,7 +60,7 @@
                                 <blurEffect style="light"/>
                             </visualEffectView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qh5-ZS-mbo" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="130" id="EJd-48-Mt1"/>
                             <constraint firstItem="qh5-ZS-mbo" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Jwj-Jp-WkV"/>
@@ -88,7 +81,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch_screen_phonetic_icon" width="85" height="73"/>
+        <image name="launch_screen_phonetic_icon" width="250" height="219"/>
         <image name="launch_screen_progress_placeholder" width="46" height="46"/>
         <image name="wave_placeholder" width="426" height="240"/>
     </resources>
